test/classes/delete-free/error-shared-record.good
error-shared-record.chpl:4: error: Shared only works with classes
